--- a/config.org
+++ b/config.org
@@ -70,6 +70,14 @@ To get the GUI key memory activbe in the terminal.
 #+end_src
 
 * Global
+** COMMENT Personal functions
+~system-type~ is too vague when it comes to BSD UNIX. We'll run uname -s to get the system name.
+#+begin_src emacs-lisp
+(if (executable-find "uname")
+    (setq uname-system (intern (string-trim (shell-command-to-string "uname -s"))))
+  (setq uname-system nil))
+
+#+end_src
 ** Disable global smartparens-mode
 Smartparens is awesome, but we don't want it everywhere.
 #+BEGIN_SRC emacs-lisp
@@ -97,7 +105,8 @@ Disable this and use ~find-file-literally~ instead, if you don't want this globa
 #+end_src
 ** auth-sources (authinfo)
 #+begin_src emacs-lisp
-(setq! auth-sources '("~/.authinfo.gpg"))
+(setq! auth-sources '("~/.authinfo.gpg")
+       epg-gpg-program "gpg2")
 #+end_src
 * Appearance
 *** Fixed Font
@@ -466,7 +475,7 @@ Use Gmail in gnus
  message-send-mail-function 'smtpmail-send-it
  user-mail-address "trhawes@gmail.com"
  smtpmail-starttls-credentials '(("smtp.gmail.com" "587" nil nil))
- smtpmail-auth-credentials (expand-file-name "~/.authinfo")
+ smtpmail-auth-credentials (expand-file-name "~/.authinfo.gpg")
  smtpmail-default-smtp-server "smtp.gmail.com"
  smtpmail-smtp-server "smtp.gmail.com"
  smtpmail-smtp-service 587
@@ -662,6 +671,20 @@ Because I would much rather define my own completions using elisp and pcomplete.
 #+begin_src emacs-lisp :tangle packages.el
 (package! fish-completion :disable t)
 #+end_src
+**** Emulate a Terminal
+***** Package
+#+begin_src emacs-lisp :tangle packages.el
+(package! emacs-eat :recipe (:type git :repo "https://codeberg.org/akib/emacs-eat.git" :branch "master")
+  :pin "d85744b48a") ;; Commit date May 15, 2023
+#+end_src
+***** Config
+#+begin_src emacs-lisp
+(use-package eat
+  :config
+  (add-hook! 'eshell-load-hook #'eat-eshell-mode)
+  ;;(add-hook! 'eshell-load-hook #'eat-eshell-visual-command-mode)
+  )
+#+end_src
 **** [[https://github.com/tom-tan/esh-help][esh-help]] for Eshell help
 Shows help in minibuffer when typing an elisp command in eshell.
 ***** Package
@@ -749,7 +772,7 @@ Shows help in minibuffer when typing an elisp command in eshell.
 (after! eshell
   (setq eshell-history-size 1024)
 
-  ; So the history vars are defined
+                                        ; So the history vars are defined
   (load "em-hist")
 
   ;; Don't ask, just save
@@ -759,11 +782,10 @@ Shows help in minibuffer when typing an elisp command in eshell.
 
   ;; For older(?) version
   ;;(message "eshell-ask-to-save-history is %s" eshell-ask-to-save-history)
-  (if (boundp 'eshell-ask-to-save-history)
-      (setq eshell-ask-to-save-history 'always))
-)
+  (when (boundp 'eshell-ask-to-save-history)
+    (setq eshell-ask-to-save-history 'always)))
 #+END_SRC
-**** Custom prompt
+**** COMMENT Custom prompt
 No longer desired with aweshell now enabled.
 ***** Packages
 #+BEGIN_SRC emacs-lisp :tangle no
@@ -831,8 +853,7 @@ No longer desired with aweshell now enabled.
     (message
      (replace-regexp-in-string
       "%" "%%"
-      (ansi-color-apply progress))))
-)
+      (ansi-color-apply progress)))))
 #+END_SRC
 *** Visual commands
 #+BEGIN_SRC emacs-lisp
@@ -843,7 +864,7 @@ No longer desired with aweshell now enabled.
   (dolist (cmd '("tmux" "aptitude" "aws-shell" "neofetch" "htop" "radeontop"))
     (add-to-list 'eshell-visual-commands cmd)))
 #+END_SRC
-** Aweshell
+** COMMENT Aweshell
 *** Package
 #+begin_src emacs-lisp :tangle packages.el
 (package! aweshell :recipe (:host github :repo "manateelazycat/aweshell")
@@ -855,12 +876,12 @@ No longer desired with aweshell now enabled.
 #+end_src
 ** Shell-pop
 Default Doom eshell (disabled, but left for reference).
-#+BEGIN_SRC emacs-lisp :tangle no
+#+BEGIN_SRC emacs-lisp
 (map! "<f3>" '+eshell/toggle)
 #+END_SRC
 Aweshell toggle.
 #+begin_src emacs-lisp
-(map! "<f3>" 'aweshell-dedicated-toggle)
+;;(map! "<f3>" 'aweshell-dedicated-toggle)
 #+end_src
 * Deft
 #+BEGIN_SRC emacs-lisp
