--- a/config.org
+++ b/config.org
@@ -1102,6 +1102,19 @@ obtt is an acronym for "org-babel-tangle templates".
 (when (not (file-directory-p obtt-templates-dir))
     (make-directory obtt-templates-dir))
 #+END_SRC
+*** Transclusion
+**** package
+#+begin_src emacs-lisp :tangle packages.el
+(package! org-transclusions :recipe (:host github :repo "nobiot/org-transclusion")
+  :pin "b10d4de") ;; Commit date Aug 19, 2023
+#+end_src
+**** config
+#+begin_src emacs-lisp
+(use-package! org-transclusion
+  :after org
+  :init
+  (add-hook! #'org-mode-hook #'org-transclusion-mode))
+#+end_src
 ** Publishing
 #+begin_src emacs-lisp
 (setq! org-publish-project-alist
@@ -1377,12 +1390,6 @@ Personal project for projectile to understand exercism.io projects. The project 
         :leader
         (:prefix ("x" . "exercism")
          :desc "Submit marked files"      "x" #'exercism-dired-submit-marked-files)))
-#+end_src
-** Chicken Scheme
-*** package
-#+begin_src emacs-lisp :tangle packages.el
-(package! geiser-chicken :recipe (:host gitlab :repo "emacs-geiser/chicken")
-  :pin "a480598b") ;; Commit date July 17, 2022
 #+end_src
 ** Clojure
 *** defaults
