Update browser code

--- a/config.org
+++ b/config.org
@@ -489,17 +489,23 @@ Use Gmail in gnus
 ** Web browser
 *** Settings
 #+BEGIN_SRC emacs-lisp
-(setq! browse-url-generic-program "/usr/bin/nyxt")
+
+(setq! browse-url-generic-program
+       (or (executable-find "brave-browser")
+           (executable-find "microsoft-edge-stable")
+           (executable-find "chromium")
+           (executable-find "firefox")))
+
 (setq! browse-url-default-browser 'eww-browse-url)
 ;;(setq shr-external-browser 'browse-url-generic)
 (setq!
- browse-url-browser-function
+ browse-url-handlers
  '(
    ("youtube\\.com" . browse-url-generic)
    ("vimeo\\.com" . browse-url-generic)
    ("facebook\\.com" . browse-url-firefox)
    ("reddit\\.com" . browse-url-firefox)
-   ("." . eww-browse-url)))
+   ("." . browse-url-generic)))
 #+END_SRC
 ** Search Tools
 *** Google
