--- a/config.org
+++ b/config.org
@@ -1047,12 +1047,14 @@ Aweshell toggle.
 #+END_SRC
 #+BEGIN_SRC emacs-lisp
 (after! org
-  (use-package! ob-racket))
+  (use-package! ob-racket)
+  (add-to-list 'org-babel-load-languages '(racket . t)))
+
 #+END_SRC
 *** Javascript
 #+begin_src emacs-lisp
 (use-package! ob-js)
-
+(add-to-list 'org-babel-load-languages '(js . t))
 (defun ob-js-insert-session-header-arg (session)
   "Insert ob-js `SESSION' header argument.
 - `js-comint'
@@ -1070,15 +1072,36 @@ Aweshell toggle.
 
 (define-key org-babel-map (kbd "J") 'ob-js-insert-session-header-arg)
 #+end_src
+*** Python
+#+begin_src emacs-lisp
+(after! org
+  (use-package ob-python)
+  (add-to-list 'org-babel-load-languages '(python . t)))
+#+end_src
+*** Lisp
+#+begin_src emacs-lisp
+(after! org
+  (use-package! ob-lisp)
+  (add-to-list 'org-babel-load-languages '(lisp . t)))
+#+end_src
+*** Clojure
+#+begin_src emacs-lisp
+(after! org
+  (use-package! ob-clojure)
+  (add-to-list 'org-babel-load-languages '(clojure . t)))
+#+end_src
 *** Ansible
+**** Package
 #+begin_src emacs-lisp :tangle packages.el
 (package! ob-ansible :recipe
   (:host github :repo "timotheosh/ob-ansible")
   :pin "a95914c") ;; Commit date 2017/8/18
 #+end_src
+**** Config
 #+begin_src emacs-lisp
 (after! org
-  (use-package! ob-ansible))
+  (use-package! ob-ansible)
+  (add-to-list 'org-babel-load-languages '(ansible . t)))
 #+end_src
 *** Projectile
 #+BEGIN_SRC emacs-lisp :tangle packages.el
@@ -1190,15 +1213,10 @@ obtt is an acronym for "org-babel-tangle templates".
 (add-hook 'after-save-hook #'gimel-run-on-save)
 #+end_src
 ** language support
+This is run after all languages have been added above.
+
 #+begin_src emacs-lisp
-(dolist (item '((emacs-lisp . t)
-                 (python . t)
-                 (shell . t)
-                 (racket . t)
-                 (js . t)
-                 (lisp . t)
-                 (clojure . t)))
-         (add-to-list 'org-babel-load-languages item))
+(org-babel-do-load-languages 'org-babel-load-languages org-babel-load-languages)
 #+end_src
 * adoc-mode
 ** Package
@@ -1304,7 +1322,8 @@ Needed for ~emacs-jupiter~
 #+begin_src emacs-lisp
 (use-package! jupyter
   :config
-  (add-to-list 'org-babel-load-languages '(jupyter . t)))
+  (add-to-list 'org-babel-load-languages '(jupyter . t))
+  (org-babel-do-load-languages 'org-babel-load-languages org-babel-load-languages))
 
 #+end_src
 * Programming Languages
