--- a/config.org
+++ b/config.org
@@ -941,6 +941,17 @@ Aweshell toggle.
   :bind ("C-c q" . chatgpt-query))
 
 #+end_src
+* Emacs Jupyter
+** Package
+#+begin_src emacs-lisp :tangle packages.el
+(package! jupyter :recipe
+  (:host github :repo "emacs-jupyter/jupyter")
+  :pin "f97f4b5") ;; Commit date 2024/7/16
+#+end_src
+** Config
+#+begin_src emacs-lisp
+(use-package! jupyter)
+#+end_src
 * Org-mode
 ** Basic Config
 *** Variables
@@ -1040,21 +1051,24 @@ Aweshell toggle.
   (use-package! ox-reveal))
 #+END_SRC
 *** Inline Racket
+**** Package
 #+BEGIN_SRC emacs-lisp :tangle packages.el
 (package! ob-racket :recipe
   (:host github :repo "hasu/emacs-ob-racket")
   :pin "da3526c") ;; Commit date 2021/3/4
 #+END_SRC
+**** Config
 #+BEGIN_SRC emacs-lisp
 (after! org
   (use-package! ob-racket)
-  (add-to-list 'org-babel-load-languages '(racket . t)))
+  ;;(add-to-list 'org-babel-load-languages '(racket . t))
+  )
 
 #+END_SRC
 *** Javascript
 #+begin_src emacs-lisp
 (use-package! ob-js)
-(add-to-list 'org-babel-load-languages '(js . t))
+;;(add-to-list 'org-babel-load-languages '(js . t))
 (defun ob-js-insert-session-header-arg (session)
   "Insert ob-js `SESSION' header argument.
 - `js-comint'
@@ -1076,19 +1090,22 @@ Aweshell toggle.
 #+begin_src emacs-lisp
 (after! org
   (use-package ob-python)
-  (add-to-list 'org-babel-load-languages '(python . t)))
+  ;;(add-to-list 'org-babel-load-languages '(python . t))
+  )
 #+end_src
 *** Lisp
 #+begin_src emacs-lisp
 (after! org
   (use-package! ob-lisp)
-  (add-to-list 'org-babel-load-languages '(lisp . t)))
+  ;;(add-to-list 'org-babel-load-languages '(lisp . t))
+  )
 #+end_src
 *** Clojure
 #+begin_src emacs-lisp
 (after! org
   (use-package! ob-clojure)
-  (add-to-list 'org-babel-load-languages '(clojure . t)))
+  ;;(add-to-list 'org-babel-load-languages '(clojure . t))
+  )
 #+end_src
 *** Ansible
 **** Package
@@ -1101,7 +1118,8 @@ Aweshell toggle.
 #+begin_src emacs-lisp
 (after! org
   (use-package! ob-ansible)
-  (add-to-list 'org-babel-load-languages '(ansible . t)))
+  ;;(add-to-list 'org-babel-load-languages '(ansible . t))
+  )
 #+end_src
 *** Projectile
 #+BEGIN_SRC emacs-lisp :tangle packages.el
@@ -1212,11 +1230,24 @@ obtt is an acronym for "org-babel-tangle templates".
 (require 'gimel)
 (add-hook 'after-save-hook #'gimel-run-on-save)
 #+end_src
+** Jupyter support
+#+begin_src emacs-lisp
+(use-package! ob-jupyter)
+(use-package! org)
+#+end_src
 ** language support
 This is run after all languages have been added above.
 
 #+begin_src emacs-lisp
-(org-babel-do-load-languages 'org-babel-load-languages org-babel-load-languages)
+(org-babel-do-load-languages 'org-babel-load-languages
+                             '((emacs-lisp . t)
+                               (ansible . t)
+                               (clojure . t)
+                               (lisp . t)
+                               (python . t)
+                               (js . t)
+                               (racket . t)
+                               (jupyter . t)))
 #+end_src
 * adoc-mode
 ** Package
@@ -1310,21 +1341,6 @@ Needed for ~emacs-jupiter~
 (package! zmq :recipe
   (:host github :repo "nnicandro/emacs-zmq")
   :pin "1d9d5a3") ;; Commit date 2024/7/16
-#+end_src
-* Emacs Jupyter
-** Package
-#+begin_src emacs-lisp :tangle packages.el
-(package! jupyter :recipe
-  (:host github :repo "emacs-jupyter/jupyter")
-  :pin "f97f4b5") ;; Commit date 2024/7/16
-#+end_src
-** Config
-#+begin_src emacs-lisp
-(use-package! jupyter
-  :config
-  (add-to-list 'org-babel-load-languages '(jupyter . t))
-  (org-babel-do-load-languages 'org-babel-load-languages org-babel-load-languages))
-
 #+end_src
 * Programming Languages
 ** General
